--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.1"
 
     defaultConfig {
         applicationId "com.zhs.zhsmusicplayerdemo"
@@ -25,4 +25,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
     compile files('libs/jsoup-1.7.2.jar')
+    compile 'com.android.support:support-v4:26.1.0'
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.6.2'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.1'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.1'
+
 }
