--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,11 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+
     }
 }
 
