--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         <activity android:name=".Activities.MainActivity" ></activity>
         <activity android:name=".Activities.DescribeActivity" ></activity>
         <activity android:name=".Activities.PlayMusicActivity" ></activity>
+        <activity android:name=".Activities.LoginActivityChoice" ></activity>
+        <activity android:name=".Activities.LoginActivity" ></activity>
+        <activity android:name=".Activities.RegistActivity" ></activity>
         <service android:name=".Service.AudioService"/><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
      App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
         <meta-data
